# amina

./: multionapi.py
scripts/: .env.example  Dockerfile  pyproject.toml  voice_streaming.py
server/: main.py  pyproject.toml  requirements.txt
